--- a/frontend/PreppyClient/package.json
+++ b/frontend/PreppyClient/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4"
+    "react-native": "0.57.4",
+    "react-native-status-bar-height": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
@@ -20,6 +21,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./assets/fonts/"]
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
