--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
+    "@firebase/firestore": "^1.0.2",
     "@google-cloud/storage": "^2.3.1",
+    "algoliasearch": "^3.32.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "firebase": "^5.5.5",
-    "firebase-admin": "^6.1.0",
+    "firebase": "^5.8.2",
+    "firebase-admin": "^6.5.1",
+    "firebase-functions": "^2.2.0",
     "nodemon": "^1.18.7",
     "swagger-ui-express": "^4.0.1"
   }
