--- a/frontend/PreppyClient/package.json
+++ b/frontend/PreppyClient/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.6.0-alpha.8af6728",
-    "react-native": "0.57.4",
+    "react-native": "^0.57.4",
+    "react-native-autocomplete-input": "^3.6.0",
     "react-native-status-bar-height": "^2.1.0",
     "react-navigation": "^2.18.2"
   },
